--- a/css/surie.css
+++ b/css/surie.css
@@ -122,7 +122,6 @@ height: 300px;
 
 .products .card {
     margin-bottom: 10px;
-    overflow: hidden;
     height: 420px;
    
 }
@@ -148,9 +147,8 @@ h5 {
 @media (max-width: 768px) {
 
     .products .card {
-        margin-bottom: 10px;
-        overflow: hidden;
         height: 300px;
+        padding: 0px;
        
     }
 
@@ -175,22 +173,29 @@ h5 {
 
 /* ..................offers............... */
 
-.offer {
-    height: 60vh;
-    background:linear-gradient(rgba(red), rgba(pink)) ;
-    z-index: 5;
-    border-radius: 5px;
- 
-}
 
 
-.offer .card {
+.offer .card{
     border: none !important;
-
 }
+
 
 
 .card:hover {
+    box-shadow: 0px 2px 54px 4px rgba(0, 0, 0, 0.09);
+    transition: 0.5s;
+}
+
+
+/* ................All Categories................. */
+
+
+.all-categories .item {
+    border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+
+.all-categories .item:hover {
     box-shadow: 0px 2px 54px 4px rgba(0, 0, 0, 0.09);
     transition: 0.5s;
 }
