--- a/css/surie.css
+++ b/css/surie.css
@@ -1,4 +1,11 @@
 
+   html,body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden;
+
+}
 
 div {
     /* border: 1px black solid ; */
@@ -6,12 +13,17 @@ div {
 
 
 
-
-
 /* .............................Navbar........................ */
+
+nav {
+    position: fixed;
+    top: 0;
+    margin: 0;
+}
 
 .navbar img {
     width: 100px;
+
 }
 
 
@@ -39,6 +51,9 @@ div {
 }
 
 
+.carousel-inner {
+    margin-top: 70px;
+}
 
 
 /* ......................banner.................... */
@@ -63,6 +78,7 @@ div {
 ::-webkit-scrollbar {
     display: none;
     width: 0;
+    height: 0;
 }
 
 
@@ -201,3 +217,107 @@ h5 {
 }
 
 
+
+/* ...............footer................... */
+
+
+footer{
+    width: 100%;
+    position: relative;
+    top: 0;
+    margin: 0;
+    background-color: #2c3e50;
+    height: 40vh;
+    
+}
+
+
+footer img {
+    height: 40vh;
+    width: 100%;
+    background-size: cover;
+}
+
+footer .bg {
+    background: linear-gradient(red, blue);
+    height: 40vh;
+    width: 100%;
+    opacity: .4;
+    position:absolute;
+    top: 0;
+    right:0 ;
+}
+
+
+/* ..........................footer content................. */
+
+.content {
+
+    top: 0;
+    position: absolute;
+    padding-left: 15vh;
+    padding-top: 5vh;
+
+ 
+}
+
+
+.content h4 {
+    color: white;
+}
+
+.content li {
+list-style: none;
+
+}
+
+.content li a {
+    color: white;  
+    text-decoration: none;
+}
+
+/* 
+div {
+    border: 1px solid black;
+}
+ */
+/* .................................... */
+
+@media (max-width:768px)  {
+
+    footer {
+        height: 100vh;
+    }
+
+    footer img {
+        height: 100vh;
+    }
+
+    footer .bg {
+        height: 100vh;
+    }
+    
+    .content {
+        padding-left: 10vh;
+    }
+    
+}
+
+
+
+
+
+/* ........................credit................... */
+
+
+.credit {
+background-color: #2c3e50;
+color: white;
+
+
+}
+
+
+.credit  h6 {
+    padding-top: 1vh;
+}
